# dir-maker-cli

./: README.md  pyproject.toml
dir_maker_cli/: cli.py  main.py
dir_maker_cli/dir_maker/: __init__.py  dir_maker.py
dir_maker_cli/input_parser/: input_parser.py  simple_arg_parser.py
dir_maker_cli/models/: command.py
tests/: test_dir_maker.py  test_simple_arg_parser.py
